--- a/assets/scss/theme-7.scss
+++ b/assets/scss/theme-7.scss
@@ -3,9 +3,9 @@ $sidebar-width: 280px;
 $single-col-max-width: 820px;
 
 // Define theme colour scheme
-$theme-color-primary: #5D6BA7;
+$theme-color-primary: #485384;
 
-$theme-text-color-primary: #292929;
+$theme-text-color-primary: #000000;
 $theme-text-color-secondary: lighten($theme-text-color-primary, 15%);
 $theme-text-color-light: lighten($theme-text-color-primary, 40%);
 $theme-bg-light: #fafafa;
