--- a/assets/scss/theme/_base.scss
+++ b/assets/scss/theme/_base.scss
@@ -67,12 +67,12 @@ h1, h2, h3, h4, h5, h6 {
 	}
 	
 	.btn-primary {
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0);
 		border-color: transparent;
 		font-size: 1rem;
 		padding-top: 0.5rem;
 		&:hover {
-			background: rgba(0, 0, 0, 0.4);
+			background: rgba(0, 0, 0);
 			border-color: transparent;
 		}
 	}
@@ -93,7 +93,7 @@ h1, h2, h3, h4, h5, h6 {
 	    .navbar-toggler {
 		    @include border-radius(2px);
 		    @include opacity(0.8);
-		    border: 1px solid rgba(256, 256, 256, 0.8);
+		    border: 1px solid rgba(256, 256, 256);
 		    padding: .25rem .6rem;
 		    
 		    &:hover {
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
 	    &.active {
 		    .nav-link {
 			   
-		       color: rgba(0, 0, 0, 0.5); 
+		       color: rgba(0, 0, 0); 
 		       &:hover {
 				    text-decoration: none;
 			    }
@@ -122,10 +122,10 @@ h1, h2, h3, h4, h5, h6 {
 		    
 	    }
 	    .nav-link {
-		    color: rgba(256, 256, 256, 0.8);
+		    color: rgba(256, 256, 256);
 		    &:hover {
 			    text-decoration: underline;
-			    color: rgba(0, 0, 0, 0.6); 
+			    color: rgba(0, 0, 0); 
 		    }
 	    }
 	    
