--- a/assets/scss/theme/_demo.scss
+++ b/assets/scss/theme/_demo.scss
@@ -84,7 +84,7 @@ body {
            margin-top: 5px;
            &:hover {
                @include opacity(0.9);
-               border: 2px solid rgba(256, 256, 256, 0.9);
+               border: 2px solid rgba(256, 256, 256);
            }
         }
         &.list-inline-item {
